--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -280,17 +280,17 @@
                                     <tbody>
                                         <tr>
                                             <th scope="row"><img src="../images/Queimadura_1.png" alt="Amputação"
-                                                    class="img-small"></th>
+                                                    class="img-thumbnail"></th>
                                             <td class="small">Queimadura 1° grau</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Queimadura_2.png" alt="Amputação"
-                                                    class="img-small"></th>
+                                                    class="img-thumbnail"></th>
                                             <td class="small">Queimadura 2° grau</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Queimadura_3.png" alt="Amputação"
-                                                    class="img-small"></th>
+                                                    class="img-thumbnail"></th>
                                             <td class="small">Queimadura 3° grau</td>
                                         </tr>
                                     </tbody>
@@ -303,17 +303,17 @@
                                     <tbody>
                                         <tr>
                                             <th scope="row"><img src="../images/Fratura_Luxacao_Entorse.png"
-                                                    alt="Amputação" class="img-small"></th>
+                                                    alt="Amputação" class="img-thumbnail"></th>
                                             <td class="small">Fratura/Luxação/Entorse</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Amputacao.png" alt="Amputação"
-                                                    class="img-small"></th>
+                                                    class="img-thumbnail"></th>
                                             <td class="small">Amputação</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Evisceracao.png" alt="Amputação"
-                                                    class="img-small"></th>
+                                                    class="img-thumbnail"></th>
                                             <td class="small">Evisceração</td>
                                         </tr>
                                     </tbody>
