--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -268,10 +268,6 @@
                         <img class="img" id="humanBody" src="../images/corpo_maior.PNG" alt="body-image">
                     </div>
                 </div>
-                <div class="d-flex justify-content-center mt-4">
-                    <button type="button" class="btn btn-light fw-bold" id="undoBtn">Desfazer</button>
-                </div>
-                
                 <div class="container mt-3 d-flex justify-content-center">
                     <div class="row">
                         <div class="col-md-4">
@@ -324,8 +320,8 @@
                             <div class="table-responsive table-container">
                                 <table class="table text-center text-break w-100">
                                     <tr>
-                                        <th scope="row"><img src="../images/Ferimentos_diversos.png"
-                                                alt="Amputação" class="img-thumbnail"></th>
+                                        <th scope="row"><img src="../images/Ferimentos_diversos.png" alt="Amputação"
+                                                class="img-thumbnail"></th>
                                         <td class="small">Ferimentos diversos</td>
                                     </tr>
                                     <tr>
@@ -343,15 +339,127 @@
                         </div>
                     </div>
                 </div>
-                <div class="espaço_botao">
-                    <div class="botao">
-                        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinaisesintomashtml'">Voltar</button>
-                        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'glasglow.html'">Proximo</button>
-                    </div>
+                <div class="d-flex justify-content-center mt-4">
+                    <button type="button" class="btn btn-light fw-bold" id="undoBtn">Desfazer</button>
                 </div>
 
 
-            </form>
+                <form action="">
+                    <div class="form-group">
+                        <div class="container-fluid-linha">
+                            <div class="card-body">
+                                <form id="TraumaLocForm">
+                                    <div class="texto">
+                                        Adicione um campo de seleção para o tipo de trauma
+                                        <label for="traumaType" class="mt-1 mb-2">Selecione o tipo de trauma:</label>
+                                    </div>
+                                    <select id="traumaType" class="form-control mb-3">
+                                        <option value="Fratura_Luxacao_Entorse">Fraturas/Luxações/Entorses</option>
+                                        <option value="Ferimentos_diversos">Ferimentos diversos</option>
+                                        <option value="Hemorragia">Hemorragia</option>
+                                        <option value="Evisceracao">Evisceração</option>
+                                        <option value="FAB_FAF">FAB/FAF</option>
+                                        <option value="Amputacao">Amputação</option>
+                                        <option value="Queimadura_1">Queimadura 1° grau</option>
+                                        <option value="Queimadura_2">Queimadura 2° grau</option>
+                                        <option value="Queimadura_3">Queimadura 3° grau</option>
+                                    </select>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="corpo">
+                        <div class="row" id="imageContainer">
+                            <img class="img" id="humanBody" src="../images/corpo_menor.PNG" alt="body-image">
+                        </div>
+                    </div>
+                    <div class="container mt-3 d-flex justify-content-center">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="table-responsive table-container">
+                                    <table class="table text-center text-break w-100">
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row"><img src="../images/Queimadura_1.png" alt="Amputação"
+                                                        class="img-thumbnail"></th>
+                                                <td class="small">Queimadura 1° grau</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"><img src="../images/Queimadura_2.png" alt="Amputação"
+                                                        class="img-thumbnail"></th>
+                                                <td class="small">Queimadura 2° grau</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"><img src="../images/Queimadura_3.png" alt="Amputação"
+                                                        class="img-thumbnail"></th>
+                                                <td class="small">Queimadura 3° grau</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="table-responsive table-container">
+                                    <table class="table text-center text-break w-100">
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row"><img src="../images/Fratura_Luxacao_Entorse.png"
+                                                        alt="Amputação" class="img-thumbnail"></th>
+                                                <td class="small">Fratura/Luxação/Entorse</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"><img src="../images/Amputacao.png" alt="Amputação"
+                                                        class="img-thumbnail"></th>
+                                                <td class="small">Amputação</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"><img src="../images/Evisceracao.png" alt="Amputação"
+                                                        class="img-thumbnail"></th>
+                                                <td class="small">Evisceração</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="table-responsive table-container">
+                                    <table class="table text-center text-break w-100">
+                                        <tr>
+                                            <th scope="row"><img src="../images/Ferimentos_diversos.png" alt="Amputação"
+                                                    class="img-thumbnail"></th>
+                                            <td class="small">Ferimentos diversos</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="../images/FAB_FAF.png" alt="Amputação"
+                                                    class="img-thumbnail"></th>
+                                            <td class="small">FAB/FAF</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="../images/Hemorragia.png" alt="Amputação"
+                                                    class="img-thumbnail"></th>
+                                            <td class="small">Hemorragia</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center mt-4">
+                        <button type="button" class="btn btn-light fw-bold" id="undoBtn">Desfazer</button>
+                    </div>
+
+
+                    <div class="espaço_botao">
+                        <div class="botao">
+                            <button type="button" class="btn btn-outline-primary btn-lg"
+                                onclick="window.location.href = 'sinaisesintomashtml'">Voltar</button>
+                            <button type="button" class="btn btn-outline-primary btn-lg"
+                                onclick="window.location.href = 'glasglow.html'">Proximo</button>
+                        </div>
+                    </div>
+
+
+                </form>
 
         </div>
 
