--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -452,7 +452,7 @@
                     <div class="espaço_botao">
                         <div class="botao">
                             <button type="button" class="btn btn-outline-primary btn-lg"
-                                onclick="window.location.href = 'sinaisesintomashtml'">Voltar</button>
+                                onclick="window.location.href = 'sinaisesintomas.html'">Voltar</button>
                             <button type="button" class="btn btn-outline-primary btn-lg"
                                 onclick="window.location.href = 'glasglow.html'">Proximo</button>
                         </div>
