--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -277,17 +277,17 @@
                                         <tr>
                                             <th scope="row"><img src="../images/Queimadura_1.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">Queimadura 1° grau</td>
+                                            <td class="small" style="width: 53%;">Queimadura 1° grau</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Queimadura_2.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">Queimadura 2° grau</td>
+                                            <td class="small" style="width: 53%;">Queimadura 2° grau</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Queimadura_3.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">Queimadura 3° grau</td>
+                                            <td class="small" style="width: 53%;">Queimadura 3° grau</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -300,17 +300,17 @@
                                         <tr>
                                             <th scope="row"><img src="../images/Fratura_Luxacao_Entorse.png"
                                                     alt="Amputação" class="img-thumbnail"></th>
-                                            <td class="small">Fratura/Luxação/Entorse</td>
+                                            <td class="small" style="width: 53%;">Fratura/Luxação/Entorse</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Amputacao.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">Amputação</td>
+                                            <td class="small" style="width: 53%;">Amputação</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Evisceracao.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">Evisceração</td>
+                                            <td class="small" style="width: 53%;">Evisceração</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -322,17 +322,17 @@
                                     <tr>
                                         <th scope="row"><img src="../images/Ferimentos_diversos.png" alt="Amputação"
                                                 class="img-thumbnail"></th>
-                                        <td class="small">Ferimentos diversos</td>
+                                        <td class="small" style="width: 53%;">Ferimentos diversos</td>
                                     </tr>
                                     <tr>
                                         <th scope="row"><img src="../images/FAB_FAF.png" alt="Amputação"
                                                 class="img-thumbnail"></th>
-                                        <td class="small">FAB/FAF</td>
+                                        <td class="small" style="width: 53%;">FAB/FAF</td>
                                     </tr>
                                     <tr>
                                         <th scope="row"><img src="../images/Hemorragia.png" alt="Amputação"
                                                 class="img-thumbnail"></th>
-                                        <td class="small">Hemorragia</td>
+                                        <td class="small" style="width: 53%;">Hemorragia</td>
                                     </tr>
                                 </table>
                             </div>
@@ -382,17 +382,17 @@
                                             <tr>
                                                 <th scope="row"><img src="../images/Queimadura_1.png" alt="Amputação"
                                                         class="img-thumbnail"></th>
-                                                <td class="small">Queimadura 1° grau</td>
+                                                <td class="small" style="width: 53%;">Queimadura 1° grau</td>
                                             </tr>
                                             <tr>
                                                 <th scope="row"><img src="../images/Queimadura_2.png" alt="Amputação"
                                                         class="img-thumbnail"></th>
-                                                <td class="small">Queimadura 2° grau</td>
+                                                <td class="small" style="width: 53%;">Queimadura 2° grau</td>
                                             </tr>
                                             <tr>
                                                 <th scope="row"><img src="../images/Queimadura_3.png" alt="Amputação"
                                                         class="img-thumbnail"></th>
-                                                <td class="small">Queimadura 3° grau</td>
+                                                <td class="small" style="width: 53%;">Queimadura 3° grau</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -405,17 +405,17 @@
                                             <tr>
                                                 <th scope="row"><img src="../images/Fratura_Luxacao_Entorse.png"
                                                         alt="Amputação" class="img-thumbnail"></th>
-                                                <td class="small">Fratura/Luxação/Entorse</td>
+                                                <td class="small" style="width: 53%;">Fratura/Luxação/Entorse</td>
                                             </tr>
                                             <tr>
                                                 <th scope="row"><img src="../images/Amputacao.png" alt="Amputação"
                                                         class="img-thumbnail"></th>
-                                                <td class="small">Amputação</td>
+                                                <td class="small" style="width: 53%;">Amputação</td>
                                             </tr>
                                             <tr>
                                                 <th scope="row"><img src="../images/Evisceracao.png" alt="Amputação"
                                                         class="img-thumbnail"></th>
-                                                <td class="small">Evisceração</td>
+                                                <td class="small" style="width: 53%;">Evisceração</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -427,17 +427,17 @@
                                         <tr>
                                             <th scope="row"><img src="../images/Ferimentos_diversos.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">Ferimentos diversos</td>
+                                            <td class="small" style="width: 53%;">Ferimentos diversos</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/FAB_FAF.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">FAB/FAF</td>
+                                            <td class="small" style="width: 53%;">FAB/FAF</td>
                                         </tr>
                                         <tr>
                                             <th scope="row"><img src="../images/Hemorragia.png" alt="Amputação"
                                                     class="img-thumbnail"></th>
-                                            <td class="small">Hemorragia</td>
+                                            <td class="small" style="width: 53%;">Hemorragia</td>
                                         </tr>
                                     </table>
                                 </div>
