--- a/pages/glasglow.html
+++ b/pages/glasglow.html
@@ -689,8 +689,8 @@
       document.getElementById('soma').value = soma;
     }
   </script>
-
-<!-- <script>
+<!-- 
+<script>
   function calcularSoma() {
     var soma = 0;
     var checkboxes = document.querySelectorAll('input[name=grupoMaiores5Anos]:checked');
