--- a/pages/loctromas.html
+++ b/pages/loctromas.html
@@ -244,72 +244,69 @@
             </div>
             <div class="container mt-3">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="table-responsive table-container">
-                            <table class="table text-center text-break w-100">
-                                <tbody>
-                                    <tr>
-                                        <th scope="row"><img src="Amputacao.png" alt="Amputação" class="img-small"></th>
-                                        <td class="small">Amputação</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row"><img src="Evisceracao.png" alt="Amputação" class="img-small">
-                                        </th>
-                                        <td class="small">Evisceração</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row"><img src="FAB_FAF.png" alt="Amputação" class="img-small"></th>
-                                        <td class="small">FAB/FAF</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="table-responsive table-container">
-                            <table class="table text-center text-break w-100">
-                                <tbody>
-                                    <tr>
-                                        <th scope="row"><img src="Ferimentos_diversos.png" alt="Amputação"
-                                                class="img-small"></th>
-                                        <td class="small">Ferimentos diversos</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row"><img src="Fratura_Luxacao_Entorse.png" alt="Amputação"
-                                                class="img-small"></th>
-                                        <td class="small">Fratura/Luxação/Entorse</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row"><img src="Hemorragia.png" alt="Amputação" class="img-small">
-                                        </th>
-                                        <td class="small">Hemorragia</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="table-responsive table-container">
-                            <table class="table text-center text-break w-100">
-                                <tbody>
-                                    <tr>
-                                        <th scope="row"><img src="Queimadura_1.png" alt="Amputação" class="img-small">
-                                        </th>
-                                        <td class="small">Queimadura 1° grau</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row"><img src="Queimadura_2.png" alt="Amputação" class="img-small">
-                                        </th>
-                                        <td class="small">Queimadura 2° grau</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row"><img src="Queimadura_3.png" alt="Amputação" class="img-small">
-                                        </th>
-                                        <td class="small">Queimadura 3° grau</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                    <div class="col-md-12 d-flex gap-4">
+                        <div class="card" style="width: 10rem;">
+                            <img src="Amputacao.png" class="card-img-top img-small d-flex align-self-center" alt="Amputação">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">Amputação</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="Evisceracao.png" class="card-img-top img-small d-flex align-self-center" alt="Evisceracao">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">Evisceração</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="FAB_FAF.png" class="card-img-top img-small d-flex align-self-center" alt="FAB/FAF">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">FAB/FAF</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="Ferimentos_diversos.png" class="card-img-top img-small d-flex align-self-center" alt="Ferimentos diversos">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">Ferimentos diversos</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="Fratura_Luxacao_Entorse.png" class="card-img-top img-small d-flex align-self-center" alt="Fratura/Luxação/Entorse">
+                            <div class="card-body">
+                              <h5 class="card-title small">Fratura/Luxação/Entorse</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="Hemorragia.png" class="card-img-top img-small d-flex align-self-center" alt="Hemorragia">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">Hemorragia</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="Queimadura_1.png" class="card-img-top img-small d-flex align-self-center" alt="Queimadura 1° grau">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">Queimadura 1° grau</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="Queimadura_2.png" class="card-img-top img-small d-flex align-self-center" alt="Queimadura 2° grau">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">Queimadura 2° grau</h5>
+                            </div>
+                          </div>
+
+                          <div class="card" style="width: 10rem;">
+                            <img src="Queimadura_3.png" class="card-img-top img-small d-flex align-self-center" alt="Queimadura 3° grau">
+                            <div class="card-body align-self-center">
+                              <h5 class="card-title small">Queimadura 3° grau</h5>
+                            </div>
+                          </div>
                     </div>
                 </div>
             </div>
