--- a/pages/loctromas.html
+++ b/pages/loctromas.html
@@ -311,8 +311,8 @@
                 </div>
             </div>
             <div class="d-flex justify-content-between mt-4">
-                <button type="submit" class="btn btn-primary" id="backBtn">Voltar</button>
-                <button type="submit" class="btn btn-primary" id="nextBtn">Próximo</button>
+                <button type="submit" class="btn btn-primary" id="backBtn" onclick="window.location.href = 'sinaisesintomas.html'">Voltar</button>
+                <button type="submit" class="btn btn-primary" id="nextBtn" onclick="window.location.href = 'glasglow.html'">Próximo</button>
             </div>
         </form>
     </div>
