--- a/pages/loctromas.html
+++ b/pages/loctromas.html
@@ -85,6 +85,10 @@
             display: flex;
             margin: 0px;
         }
+
+        .cards .card:hover{
+            border-color: #333333;
+        }
     </style>
 </head>
 <nav class="navbar navbar-dark" id="nav">
@@ -243,68 +247,68 @@
                 <button type="button" class="btn btn-danger fw-bold" id="undoBtn">Desfazer</button>
             </div>
             <div class="container mt-3">
-                <div class="row">
+                <div class="row cards">
                     <div class="col-md-12 d-flex gap-4">
                         <div class="card" style="width: 10rem;">
-                            <img src="Amputacao.png" class="card-img-top img-small d-flex align-self-center" alt="Amputação">
-                            <div class="card-body align-self-center">
+                            <img src="Amputacao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Amputação">
+                            <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">Amputação</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="Evisceracao.png" class="card-img-top img-small d-flex align-self-center" alt="Evisceracao">
-                            <div class="card-body align-self-center">
+                            <img src="Evisceracao.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Evisceracao">
+                            <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">Evisceração</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="FAB_FAF.png" class="card-img-top img-small d-flex align-self-center" alt="FAB/FAF">
-                            <div class="card-body align-self-center">
+                            <img src="FAB_FAF.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="FAB/FAF">
+                            <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">FAB/FAF</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="Ferimentos_diversos.png" class="card-img-top img-small d-flex align-self-center" alt="Ferimentos diversos">
-                            <div class="card-body align-self-center">
-                              <h5 class="card-title small">Ferimentos diversos</h5>
+                            <img src="Ferimentos_diversos.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Ferimentos diversos">
+                            <div class="card-body align-self-center d-flex align-items-center ">
+                              <h5 class="card-title small text-center">Ferimentos diversos</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="Fratura_Luxacao_Entorse.png" class="card-img-top img-small d-flex align-self-center" alt="Fratura/Luxação/Entorse">
+                            <img src="Fratura_Luxacao_Entorse.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Fratura/Luxação/Entorse">
                             <div class="card-body">
                               <h5 class="card-title small">Fratura/Luxação/Entorse</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="Hemorragia.png" class="card-img-top img-small d-flex align-self-center" alt="Hemorragia">
-                            <div class="card-body align-self-center">
+                            <img src="Hemorragia.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Hemorragia">
+                            <div class="card-body align-self-center d-flex align-items-center">
                               <h5 class="card-title small">Hemorragia</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="Queimadura_1.png" class="card-img-top img-small d-flex align-self-center" alt="Queimadura 1° grau">
-                            <div class="card-body align-self-center">
-                              <h5 class="card-title small">Queimadura 1° grau</h5>
+                            <img src="Queimadura_1.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 1° grau">
+                            <div class="card-body align-self-center d-flex align-items-center">
+                              <h5 class="card-title small text-center">Queimadura 1° grau</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="Queimadura_2.png" class="card-img-top img-small d-flex align-self-center" alt="Queimadura 2° grau">
-                            <div class="card-body align-self-center">
-                              <h5 class="card-title small">Queimadura 2° grau</h5>
+                            <img src="Queimadura_2.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 2° grau">
+                            <div class="card-body align-self-center d-flex align-items-center">
+                              <h5 class="card-title small text-center">Queimadura 2° grau</h5>
                             </div>
                           </div>
 
                           <div class="card" style="width: 10rem;">
-                            <img src="Queimadura_3.png" class="card-img-top img-small d-flex align-self-center" alt="Queimadura 3° grau">
-                            <div class="card-body align-self-center">
-                              <h5 class="card-title small">Queimadura 3° grau</h5>
+                            <img src="Queimadura_3.png" class="card-img-top img-small d-flex align-self-center mt-3" alt="Queimadura 3° grau">
+                            <div class="card-body align-self-center d-flex align-items-center">
+                              <h5 class="card-title small text-center">Queimadura 3° grau</h5>
                             </div>
                           </div>
                     </div>
