--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -161,7 +161,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">LOCALIZAÇÃO DOS TRAUMAS</a></li>
+                                <li><a class="dropdown-item" href="loctromas.html">LOCALIZAÇÃO DOS TRAUMAS</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
