--- a/pages/problemasuspeitos.html
+++ b/pages/problemasuspeitos.html
@@ -170,7 +170,7 @@
                           <hr class="dropdown-divider" />
                         </li>
                         <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
+                          <a class="dropdown-item" href="#" onclick="window.location.href = 'loctromas.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
                         </li>
                         <li>
                           <hr class="dropdown-divider" />
