--- a/pages/cadastropaciente.html
+++ b/pages/cadastropaciente.html
@@ -160,7 +160,7 @@
                       <hr class="dropdown-divider" />
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/ocorrencia.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/loctromas.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
                     </li>
                     <li>
                       <hr class="dropdown-divider" />
