--- a/pages/loctromas.html
+++ b/pages/loctromas.html
@@ -24,7 +24,6 @@
             background-color: #c1c1c1;
             font-family: 'Inter', sans-serif;
             color: white;
-
         }
 
         .img-fluid.logo_noar {
@@ -128,8 +127,7 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#" style="white-space: break-spaces"
-                                    onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS
-                                    SUSPEITOS</a>
+                                    onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider" />
@@ -155,8 +153,7 @@
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS
-                                    VITAIS</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
@@ -169,8 +166,7 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#" style="white-space: break-spaces"
-                                    onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE
-                                    TRANSPORTE</a>
+                                    onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider" />
@@ -246,7 +242,7 @@
             <div class="d-flex justify-content-center mt-4">
                 <button type="button" class="btn btn-danger fw-bold" id="undoBtn">Desfazer</button>
             </div>
-            <div class="container mt-3">
+            <div class="container mt-4">
                 <div class="row cards">
                     <div class="col-md-12 d-flex gap-4">
                         <div class="card" style="width: 10rem;">
